# TurkishC

./: CMakeLists.txt  README.md  dictionary.json  main.cpp  spanish_dict.json
.cache/clangd/index/: json.hpp.63906C9C5FC17BEE.idx  main.cpp.1784BD900F8462A2.idx
examples/: main.c  main.tc  smain.spc
